# pyALRA

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
docs/_build/doctrees/: core.doctree  environment.pickle  index.doctree  module.doctree
docs/_build/html/: .buildinfo  core.html  genindex.html  index.html  module.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/pyALRA/: core.html
docs/_build/html/_sources/: core.rst.txt  index.rst.txt  module.rst.txt
docs/_build/latex/: pyalra.aux  pyalra.fdb_latexmk  pyalra.fls  pyalra.idx  pyalra.ilg  pyalra.ind  pyalra.out  pyalra.tex  pyalra.toc
pyALRA/: __init__.py  core.py
pyALRA/benchmarks/: benchmark_ALRA.r  benchmark_pyALRA.ipynb  pyALRA_fig.ipynb
tutorials/: tutorial.ipynb
